# cli-tools

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  CODING_GUIDELINES.md  PRODUCT_VISION.md  copilot-instructions.md  dependabot.yml
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/workflows/: ci-fixer.lock.yml  ci-fixer.md  ci.yml  code-health.lock.yml  code-health.md  codeql.yml  copilot-setup-steps.yml  dependency-review.yml  feature-planner.lock.yml  feature-planner.md  issue-implementer.lock.yml  issue-implementer.md  perf-agent-improver.lock.yml  perf-agent-improver.md  perf-analysis.lock.yml  perf-analysis.md  pipeline-orchestrator.lock.yml  pipeline-orchestrator.md  pipeline-orchestrator.yml  pr-rescue.yml  quality-gate.lock.yml  quality-gate.md  review-responder.lock.yml  review-responder.md  test-analysis.lock.yml  test-analysis.md  verify-agent-locks.yml
.github/workflows/shared/: fetch-review-comments.md
docs/: agentic-workflows.md  auto_pr_orchestrator_aw.md  changelog.md  implementation.md  plan.md  replicating-the-pipeline.md
docs/operations/: token-rotation.md
scripts/: hold-for-merge.sh  release-from-merge.sh
src/copilot_usage/: __init__.py  _formatting.py  _fs_utils.py  _test_violations.py  cli.py  interactive.py  logging_config.py  models.py  parser.py  pricing.py  render_detail.py  report.py  vscode_parser.py  vscode_report.py
src/copilot_usage/docs/: architecture.md  changelog.md  implementation.md  plan.md
tests/: test_docs.py  test_packaging.py  test_responder_sandbox.py
tests/copilot_usage/: test_cli.py  test_formatting.py  test_fs_utils.py  test_interactive.py  test_logging_config.py  test_models.py  test_parser.py  test_pricing.py  test_render_detail.py  test_report.py  test_vscode_parser.py  test_vscode_report.py
tests/e2e/: test_e2e.py
tests/e2e/fixtures/0faecbdf-b889-4bca-a51a-5254f5488cb6/: events.jsonl
tests/e2e/fixtures/4a547040-0318-44a4-a514-7ac9cbecc17e/: events.jsonl
tests/e2e/fixtures/b5df8a34-87f0-46d5-b865-83e89095b8dc/: events.jsonl
tests/e2e/fixtures/corrupt-session/: events.jsonl
tests/e2e/fixtures/empty-session/: events.jsonl
tests/e2e/fixtures/multi-shutdown-resumed/: events.jsonl
(+3 files in other folders)
